Fix for a tooltip visibility issue.
Issue: KAAV-1076

--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -15,7 +15,6 @@
     display: flex;
     font-weight: bold;
     justify-content: flex-start;
-    position: relative;
     z-index: 1;
     .input-title{
       display: flex;
